workloads/routing/character/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: character-vs
  namespace: character
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/character
    route:
    - destination:
        host: character-api.character.svc.cluster.local
        port:
          number: 8000
